--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "crypto-js": "^4.2.0",
     "mssql": "^12.0.0",
     "nodemailer": "^7.0.9",
     "passport": "^0.7.0",
@@ -53,6 +54,7 @@
     "@nestjs/schematics": "^11.0.8",
     "@nestjs/testing": "^11.1.6",
     "@types/bcrypt": "^6.0.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/mssql": "^9.1.8",
