--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,11 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+
+.env
+.env.local
+.env.*.local
+
+# Generate secure secrets
+node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
