--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "crypto-js": "^4.2.0",
+    "ioredis": "^5.8.2",
     "mssql": "^12.0.0",
     "nodemailer": "^7.0.9",
     "passport": "^0.7.0",
