--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "socket.io": "^4.8.1",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "twilio": "^5.10.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.10",
