feat:  add based storage

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.940.0",
+    "@aws-sdk/s3-request-presigner": "^3.940.0",
     "@fastify/compress": "^8.1.0",
     "@fastify/cors": "^11.1.0",
     "@fastify/helmet": "^13.0.2",
@@ -29,6 +31,7 @@
     "@nestjs/core": "^11.1.6",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.1.9",
     "@nestjs/platform-fastify": "^11.1.6",
     "@nestjs/platform-socket.io": "^11.1.6",
     "@nestjs/schedule": "^6.0.1",
@@ -41,7 +44,9 @@
     "class-validator": "^0.14.2",
     "crypto-js": "^4.2.0",
     "ioredis": "^5.8.2",
+    "mime-types": "^3.0.2",
     "mssql": "^12.0.0",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -59,9 +64,10 @@
     "@nestjs/testing": "^11.1.6",
     "@types/bcrypt": "^6.0.0",
     "@types/crypto-js": "^4.2.2",
-    "@types/express": "^5.0.3",
+    "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
     "@types/mssql": "^9.1.8",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.7.0",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-jwt": "^4.0.1",
