--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "crypto-js": "^4.2.0",
+    "fastify-file-interceptor": "^1.0.9",
     "ioredis": "^5.8.2",
     "mime-types": "^3.0.2",
     "mssql": "^12.0.0",
