--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "socket.io": "^4.8.1",
-    "swagger-ui-express": "^5.0.1",
-    "twilio": "^5.10.6"
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.10",
